# rslog

./: Cargo.toml  README.md  Rocket.toml  docker-compose.database.yml
db/migrations/: 20260310015526_init.sql  20260317225042_created_at.sql
src/: main.rs  model.rs  routes.rs
static/: create.css  details.css  main.css  shared.css
templates/: base.html.tera  create.html.tera  details.html.tera  feed.html.tera  index.html.tera
