[package]
name = "rslog"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = "0.5.1"
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
rocket_db_pools = { version = "0.2.0", features = ["sqlx_postgres", "sqlx_macros"] }
serde = "1.0.228"
sqlx = { version = "0.7.4", features = ["macros", "migrate"] }
